--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.9.3",
     "axios": "^0.21.0",
     "craco-less": "^1.17.1",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
