--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-static-cache": "^5.1.4",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.6"
   }
 }
