--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "craco-less": "^1.17.1",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-cache-router": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
