--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
+    "koa-jwt": "^4.0.0",
     "koa-static-cache": "^5.1.4",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6"
