--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.4.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
